--- a/helpstyles.css
+++ b/helpstyles.css
@@ -40,8 +40,4 @@ height: 300px;
 width: 100%;
 float: left;
 font-size:38px;
-color: black; /*This changes the colour of the text. Note the spelling is in American*/
-
-}
-
-
+color: black; /*This changes the colour of the text. Note the spelling is in Ame
